--- a/sorteo.html
+++ b/sorteo.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
   <head>
-    <meta charset="UTF-8">
+    <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alerta de Phishing - Dulmatesa</title>
     <style>
@@ -27,7 +27,7 @@
             justify-content: center;
             padding: 20px;
             background: linear-gradient(135deg, #0d2a4a, #133850);
-            border-radius: 10px 10px 0 0;
+            border-radius: 10px;
         }
         .header img {
             max-width: 200px;
@@ -41,7 +41,7 @@
         }
         .alert-text {
             text-align: left;
-            font-size: 16px;
+            font-size: 17px;
             margin-top: 10px;
         }
         .section {
@@ -111,7 +111,7 @@
           correo no era legítimo. <strong>Es muy importante que lo leas.</strong></p>
       </div>
       <div class="section">
-        <h2>1. Comprueba la dirección del remitente</h2>
+        <h2>Comprueba la dirección del remitente</h2>
         <p>Siempre que abras un correo en la organización, comprueba el
           remitente (señalado en rojo en la imagen). Es muy importante saber
           desde qué dirección lo envían.</p>
@@ -130,7 +130,7 @@
           siguiente apartado.</p>
       </div>
       <div class="section">
-        <h2>2. Revisa siempre si el correo es externo a la organización</h2>
+        <h2>Revisa siempre si el correo es externo a la organización</h2>
         <p>En el punto anterior se indica que la dirección de correo parece ser
           legítima al pertenecer a dulmatesa.es, pero los ciberdelincuentes
           podrían haberla falseado. Entonces, ¿cómo sabemos en este caso que
@@ -155,6 +155,5 @@
             de IT de Dulmatesa</a>.</p>
       </div>
     </div>
-    
   </body>
 </html>
