--- a/sorteo.html
+++ b/sorteo.html
@@ -12,6 +12,8 @@
             text-align: center;
             padding: 20px;
             background-color: #f8f9fa;
+            background: url('https://dulmatesa.github.io/fondo.jpg') no-repeat center center fixed;
+            background-size: cover;
         }
         .container {
             max-width: 800px;
@@ -75,11 +77,11 @@
         .footer-contact {
             background: linear-gradient(135deg, #0d2a4a, #133850);
             color: white;
-            padding: 20px;
+            padding: 5px;
             font-size: 18px;
             text-align: center;
             border-radius: 10px;
-            margin-top: 30px;
+            margin-top: 20px;
         }
         .footer-contact a {
             color: #fff;
@@ -98,7 +100,7 @@
           alt="Dulmatesa Logo"> </div>
       <h1>¡Cuidado, acabas de hacer clic en un correo falso!</h1>
       <div class="alert-text">
-        <!-- Imagen de phishing justificada a la derecha --> <img src="https://dulmatesa.github.io/Phishing.png"
+        <!-- Imagen de phishing justificada a la derecha --> <img src="Phishing-icono-ok.png"
 
           alt="Phishing Representativo" class="phishing-img">
         <p>El correo electrónico que recibiste era un cebo que formaba parte de
@@ -151,9 +153,11 @@
       <!-- Footer destacado -->
       <div class="footer-contact">
         <p><strong>¡Muchas gracias por tu colaboración!</strong><br>
+          <br>
           Si tienes dudas, contacta con el <a href="mailto:departamento.it@dulmatesa.es">departamento
             de IT de Dulmatesa</a>.</p>
       </div>
     </div>
   </body>
+</html>
 </html>
