--- a/sorteo.html
+++ b/sorteo.html
@@ -100,7 +100,7 @@
           alt="Dulmatesa Logo"> </div>
       <h1>¡Cuidado, acabas de hacer clic en un correo falso!</h1>
       <div class="alert-text">
-        <!-- Imagen de phishing justificada a la derecha --> <img src="Phishing-icono-ok.png"
+        <!-- Imagen de phishing justificada a la derecha --> <img src="https://dulmatesa.github.io/Phishing-icono-ok.png"
 
           alt="Phishing Representativo" class="phishing-img">
         <p>El correo electrónico que recibiste era un cebo que formaba parte de
@@ -159,5 +159,4 @@
       </div>
     </div>
   </body>
-</html>
 </html>
