--- a/index.html
+++ b/index.html
@@ -222,11 +222,14 @@
             <option value="Alejandro Silva">Alejandro Silva</option>
             <option value="Alfredo González">Alfredo González</option>
             <option value="Ana Gutiérrez">Ana Gutiérrez</option>
+            <option value="Ana Moral">Ana Moral</option>
             <option value="Begoña Quero">Begoña Quero</option>
             <option value="Diego Granero">Diego Granero</option>
             <option value="Esteban Tirado">Esteban Tirado</option>
             <option value="Francisco Ortega">Francisco Ortega</option>
+            <option value="Javier Jaime">Javier Serrano</option>
             <option value="Javier Serrano">Javier Serrano</option>
+            <option value="Joaquín Lucas">Joaquín Lucas</option>
             <option value="Miriam Hernández">Miriam Hernández</option>
             <option value="Pablo Alonso">Pablo Alonso</option>
             <option value="Raúl Castejón">Raúl Castejón</option>
@@ -336,6 +339,12 @@
                     telefono = '652914552';
                     correo = 'ana.gutierrez@dulmatesa.es';
                     break;
+                case 'Ana Moral':
+                    positionValue = 'Administrativa Contable';
+                    oficina = 'Oficinas Centrales / HQ';
+                    telefono = '952105709';
+                    correo = 'ana.moral@dulmatesa.es';
+                    break;
                 case 'Begoña Quero':
                     positionValue = 'Técnico de RR.HH. y PRL';
                     oficina = 'Sede Puente Genil';
@@ -360,11 +369,23 @@
                     correo = 'francisco.ortega@dulmatesa.es';
                     telefono = '952105709';
                     break;
+                case 'Javier Jaime':               
+                    positionValue = 'Controller';
+                    oficina = 'Oficinas Centrales / HQ';
+                    correo = 'javier.jaime@dulmatesa.es';
+                    telefono = '608656626';
+                    break;
                 case 'Javier Serrano':               
                     positionValue = 'Técnico de Calidad';
                     oficina = 'Sede Puente Genil';
                     correo = 'javier.serrano@dulmatesa.es';
                     telefono = '620751997';
+                    break;
+                case 'Joaquín Lucas':               
+                    positionValue = 'Administrativo Contable';
+                    oficina = 'Oficinas Centrales / HQ';
+                    correo = 'joaquin.lucas@dulmatesa.es';
+                    telefono = '952105709';
                     break;
                 case 'Miriam Hernández':               
                     positionValue = 'Tecnóloga';
@@ -580,10 +601,9 @@
                         </table> 
                     <div style="margin-top: 15px;">
                         <table style="width: 570px;" border="0">
-
                                 <tr>
                                     <td style="width: 20px;"> <img width="20px" src="https://www.dulmatesa.es/img/reciclado.png" alt="Reciclado" style="vertical-align: middle;"></td>
-                                    <td style="width: 570px;"><p style="margin: 10px 0; font-family: 'Montserrat', sans-serif; font-size: 8pt; color: #878787;">Cuidemos el medio ambiente. Por favor no imprima este e-mail si no es necesario.</p></td>
+                                    <td style="width: 550px;"><p style="margin: 10px 0; font-family: 'Montserrat', sans-serif; font-size: 8pt; color: #878787;">Cuidemos el medio ambiente. Por favor no imprima este e-mail si no es necesario.</p></td>
                                 </tr> 
                         </table>
                         <table style="width: 570px;" border="0">
