--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
             <option value="Diego Granero">Diego Granero</option>
             <option value="Esteban Tirado">Esteban Tirado</option>
             <option value="Francisco Ortega">Francisco Ortega</option>
-            <option value="Javier Jaime">Javier Serrano</option>
+            <option value="Javier Jaime">Javier Jaime</option>
             <option value="Javier Serrano">Javier Serrano</option>
             <option value="Joaquín Lucas">Joaquín Lucas</option>
             <option value="Miriam Hernández">Miriam Hernández</option>
