--- a/index.html
+++ b/index.html
@@ -226,6 +226,7 @@
             <option value="Begoña Quero">Begoña Quero</option>
             <option value="Diego Granero">Diego Granero</option>
             <option value="Esteban Tirado">Esteban Tirado</option>
+            <option value="Edimar González">Edimar González</option>
             <option value="Francisco Ortega">Francisco Ortega</option>
             <option value="Javier Jaime">Javier Jaime</option>
             <option value="Javier Serrano">Javier Serrano</option>
@@ -356,7 +357,13 @@
                     oficina = 'Sede Navarrés';
                     telefono = '962266191 / 630561991';
                     correo = 'diego.granero@dulmatesa.es';
-                    break;  
+                    break;
+                case 'Edimar González':               
+                    positionValue = 'Administrativa Logística';
+                    oficina = 'Oficinas Centrales / HQ';
+                    correo = 'edimar.gonzalez@dulmatesa.es';
+                    telefono = '952105709';
+                    break;
                 case 'Esteban Tirado':               
                     positionValue = 'Jefe Logística';
                     oficina = 'Sede Navarrés';
