--- a/index.html
+++ b/index.html
@@ -229,6 +229,7 @@
             <option value="Edimar González">Edimar González</option>
             <option value="Francisco Ortega">Francisco Ortega</option>
             <option value="Javier Jaime">Javier Jaime</option>
+            <option value="Javier López">Javier López</option>
             <option value="Javier Serrano">Javier Serrano</option>
             <option value="Joaquín Lucas">Joaquín Lucas</option>
             <option value="Miriam Hernández">Miriam Hernández</option>
@@ -272,7 +273,7 @@
               portapapeles. Ahora pégala en Outlook.</strong></div>
         </div>
       </div>
-      <div class="preview-section">
+      <div class="preview-section"> 
         <div class="preview-container">
           <div class="preview" id="signaturePreview"></div>
         </div>
@@ -381,6 +382,12 @@
                     oficina = 'Oficinas Centrales / HQ';
                     correo = 'javier.jaime@dulmatesa.es';
                     telefono = '608656626';
+                    break;
+                case 'Javier López':               
+                    positionValue = 'Jefe PRL & MA Central';
+                    oficina = 'Oficinas Centrales / HQ';
+                    correo = 'javier.lopez@dulmatesa.es';
+                    telefono = '686966353';
                     break;
                 case 'Javier Serrano':               
                     positionValue = 'Técnico de Calidad';
