--- a/index.html
+++ b/index.html
@@ -216,21 +216,48 @@
           botón verde "Copiar firma al portapapeles".<br>
         </strong> <br>
         <form id="signatureForm"> <label for="name" style="color:#133850">Nombre:</label>
+          
           <select id="name" required="" onchange="updateSignature()">
             <option value="" disabled="disabled" selected="selected">Selecciona
               tu nombre</option>
+            <option value="Abel Alonso">Abel Alonso</option>
+            <option value="Aina Orsi">Aina Orsi</option>
             <option value="Alejandro Silva">Alejandro Silva</option>
             <option value="Alfredo González">Alfredo González</option>
+            <option value="Álvaro García">Álvaro García</option>
+            <option value="Ana Cáceres">Ana Cáceres</option>
             <option value="Ana Gutiérrez">Ana Gutiérrez</option>
+            <option value="Ana María García">Ana María García</option>
             <option value="Ana Moral">Ana Moral</option>
+            <option value="Ana Murcia">Ana Murcia</option>
+            <option value="Antonio Rodríguez">Antonio Rodríguez</option>
+            <option value="Arantxa Argente">Arantxa Argente</option>
+            <option value="Beatriz Caballero">Beatriz Caballero</option>
             <option value="Begoña Quero">Begoña Quero</option>
+            <option value="Carlos Lluch">Carlos Lluch</option>
+            <option value="Carlos López">Carlos López</option>
+            <option value="Carlos Sarrión">Carlos Sarrión</option>
+            <option value="Carmen Sanchís">Carmen Sanchís</option>
+            <option value="Claudia Moral">Claudia Moral</option>
+            <option value="Consuelo Martínez">Consuelo Martínez</option>
+            <option value="Cristian Ortiz">Cristian Ortiz</option>
+            <option value="Dani San Martín">Dani San Martín</option>
             <option value="Diego Granero">Diego Granero</option>
+            <option value="Domingo Fernández">Domingo Fernández</option>
+            <option value="Eduardo Alarcón">Eduardo Alarcón</option>
             <option value="Esteban Tirado">Esteban Tirado</option>
-            <option value="Edimar González">Edimar González</option>
+            <option value="Fátima Gómez">Fátima Gómez</option>
+            <option value="Faustino Villanueva">Faustino Villanueva</option>
+            <option value="Fernando Rigla">Fernando Rigla</option>
             <option value="Francisco Ortega">Francisco Ortega</option>
+            <option value="Francisco Sánchez">Francisco Sánchez</option>
+            <option value="Inmaculada Palazón">Inmaculada Palazón</option>
+            <option value="Isabel Valle">Isabel Valle</option>
+            <option value="Iván Camacho">Iván Camacho</option>
             <option value="Javier Jaime">Javier Jaime</option>
             <option value="Javier López">Javier López</option>
             <option value="Javier Serrano">Javier Serrano</option>
+            <option value="Jesús Negretti">Jesús Negretti</option>
             <option value="Joaquín Lucas">Joaquín Lucas</option>
             <option value="Miriam Hernández">Miriam Hernández</option>
             <option value="Pablo Alonso">Pablo Alonso</option>
@@ -273,7 +300,7 @@
               portapapeles. Ahora pégala en Outlook.</strong></div>
         </div>
       </div>
-      <div class="preview-section"> 
+      <div class="preview-section">
         <div class="preview-container">
           <div class="preview" id="signaturePreview"></div>
         </div>
@@ -346,6 +373,12 @@
                     oficina = 'Oficinas Centrales / HQ';
                     telefono = '952105709';
                     correo = 'ana.moral@dulmatesa.es';
+                    break;
+                case 'Antonio Rodríguez':
+                    positionValue = 'Administrativo Logística';
+                    oficina = 'Oficinas Centrales / HQ';
+                    telefono = '952105709';
+                    correo = 'antonio.rodriguez@dulmatesa.es';
                     break;
                 case 'Begoña Quero':
                     positionValue = 'Técnico de RR.HH. y PRL';
