--- a/index.html
+++ b/index.html
@@ -216,7 +216,6 @@
           botón verde "Copiar firma al portapapeles".<br>
         </strong> <br>
         <form id="signatureForm"> <label for="name" style="color:#133850">Nombre:</label>
-          
           <select id="name" required="" onchange="updateSignature()">
             <option value="" disabled="disabled" selected="selected">Selecciona
               tu nombre</option>
@@ -409,6 +408,12 @@
                     oficina = 'Oficinas Centrales / HQ';
                     correo = 'francisco.ortega@dulmatesa.es';
                     telefono = '952105709';
+                    break;
+                case 'Isabel Valle':               
+                    positionValue = 'Técnica de Aprovisionamiento';
+                    oficina = 'Sede Puente Genil';
+                    correo = 'isabel.valle@dulmatesa.es';
+                    telefono = '650349402';
                     break;
                 case 'Javier Jaime':               
                     positionValue = 'Controller';
