--- a/index.html
+++ b/index.html
@@ -260,6 +260,7 @@
             <option value="Joaquín Lucas">Joaquín Lucas</option>
             <option value="Miriam Hernández">Miriam Hernández</option>
             <option value="Pablo Alonso">Pablo Alonso</option>
+            <option value="Pablo Gross">Pablo Gross</option>
             <option value="Raúl Castejón">Raúl Castejón</option>
             <option value="Zaira Burgos">Zaira Burgos</option>
           </select>
@@ -450,6 +451,12 @@
                     oficina = 'Oficinas Centrales / HQ';
                     telefono = '660970356';
                     correo = 'pablo.alonso@dulmatesa.es';
+                    break;
+                case 'Pablo Gross':
+                    positionValue = 'Administrativo Pedidos';
+                    oficina = 'Oficinas Centrales / HQ';
+                    telefono = '674377672';
+                    correo = 'pablo.gross@dulmatesa.es';
                     break;
                 case 'Raúl Castejón':               
                     positionValue = 'Controller';
