--- a/index.html
+++ b/index.html
@@ -452,8 +452,7 @@
                     telefono = '660970356';
                     correo = 'pablo.alonso@dulmatesa.es';
                     break;
-                case 'Pablo Gross':
-                    positionValue = 'Administrativo Pedidos';
+                case 'Pablo Gross':Auxiliar Administrativo Comercial y Logística';
                     oficina = 'Oficinas Centrales / HQ';
                     telefono = '674377672';
                     correo = 'pablo.gross@dulmatesa.es';
