--- a/index.html
+++ b/index.html
@@ -452,7 +452,8 @@
                     telefono = '660970356';
                     correo = 'pablo.alonso@dulmatesa.es';
                     break;
-                case 'Pablo Gross':'Auxiliar Administrativo Comercial y Logística';
+                case 'Pablo Gross':
+                    positionValue = 'Auxiliar Administrativo Comercial y Logística';
                     oficina = 'Oficinas Centrales / HQ';
                     telefono = '674377672';
                     correo = 'pablo.gross@dulmatesa.es';
